Add experimental SIMD implementation of B-tree to round down dates
Signed-off-by: Ketan Verma <ketan9495@gmail.com>