@@ -43,3 +43,81 @@ tasks.named('forbiddenApisMain').configure {
   // TODO: Need to decide how we want to handle for forbidden signatures with the changes to server
   replaceSignatureFiles 'jdk-signatures'
 }
+
+// Add support for incubator modules on supported Java versions.
+if (BuildParams.runtimeJavaVersion >= JavaVersion.VERSION_20) {
+  sourceSets {
+    java20 {
+      java {
+        srcDirs = ['src/main/java20']
+      }
+    }
+
+    java20Test {
+      java {
+        srcDirs = ['src/test/java20']
+      }
+    }
+  }
+
+  configurations {
+    java20Implementation.extendsFrom(implementation)
+    java20TestImplementation.extendsFrom(implementation)
+  }
+
+  dependencies {
+    java20Implementation sourceSets.main.output
+
+    // Adding Java 20 sources as compile-only to make them visible during compilation,
+    // but using the multi-release JAR output to provide the runtime functionality.
+    // This helps avoid JarHell problems when an overridden class is present with the same name.
+    java20TestCompileOnly sourceSets.java20.output
+    java20TestImplementation files(jar.archiveFile)
+    java20TestImplementation sourceSets.test.output
+    java20TestImplementation(project(':test:framework')) {
+      exclude group: 'org.opensearch', module: 'opensearch-common'
+    }
+  }
+
+  compileJava20Java {
+    sourceCompatibility = JavaVersion.VERSION_20
+    targetCompatibility = JavaVersion.VERSION_20
+    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
+    options.compilerArgs -= '-Werror' // use of incubator modules is reported as a warning
+  }
+
+  compileJava20TestJava {
+    sourceCompatibility = JavaVersion.VERSION_20
+    targetCompatibility = JavaVersion.VERSION_20
+    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
+    options.compilerArgs -= '-Werror' // use of incubator modules is reported as a warning
+  }
+
+  jar {
+    metaInf {
+      into 'versions/20'
+      from sourceSets.java20.output
+    }
+    manifest.attributes('Multi-Release': 'true')
+  }
+
+  forbiddenApisJava20 {
+    failOnMissingClasses = false
+    ignoreSignaturesOfMissingClasses = true
+  }
+
+  forbiddenApisJava20Test {
+    failOnMissingClasses = false
+    ignoreSignaturesOfMissingClasses = true
+  }
+
+  tasks.register('testJava20', Test) {
+    dependsOn jar
+    shouldRunAfter test
+    group = 'verification'
+    testClassesDirs = sourceSets.java20Test.output.classesDirs
+    classpath = sourceSets.java20Test.runtimeClasspath
+  }
+
+  check.dependsOn('testJava20')
+}
